--- a/hw-1/package.json
+++ b/hw-1/package.json
@@ -12,7 +12,11 @@
     "vue": "^3.5.18"
   },
   "devDependencies": {
+    "@eslint/js": "^9.33.0",
     "@vitejs/plugin-vue": "^6.0.1",
+    "eslint": "^9.33.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-vue": "^10.4.0",
     "vite": "^7.1.0"
   }
 }
